--- a/router/pom.xml
+++ b/router/pom.xml
@@ -16,4 +16,10 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>bao.study</groupId>
+            <artifactId>remoting</artifactId>
+        </dependency>
+    </dependencies>
 </project>
