--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>client</module>
         <module>store</module>
         <module>remoting</module>
+        <module>common</module>
     </modules>
 
     <properties>
@@ -47,6 +48,11 @@
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
                 <version>4.1.77.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>com.esotericsoftware</groupId>
+                <artifactId>kryo</artifactId>
+                <version>5.3.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
