--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
             </dependency>
             <dependency>
                 <groupId>bao.study</groupId>
+                <artifactId>common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>bao.study</groupId>
                 <artifactId>client</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -53,6 +58,11 @@
                 <groupId>com.esotericsoftware</groupId>
                 <artifactId>kryo</artifactId>
                 <version>5.3.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.79</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
