--- a/broker/pom.xml
+++ b/broker/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>store</artifactId>
+    <artifactId>broker</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -22,4 +22,5 @@
             <artifactId>remoting</artifactId>
         </dependency>
     </dependencies>
+
 </project>
