feat: broker register

--- a/broker/pom.xml
+++ b/broker/pom.xml
@@ -21,6 +21,10 @@
             <groupId>bao.study</groupId>
             <artifactId>remoting</artifactId>
         </dependency>
+        <dependency>
+            <groupId>bao.study</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
