--- a/client/pom.xml
+++ b/client/pom.xml
@@ -16,4 +16,15 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>bao.study</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>bao.study</groupId>
+            <artifactId>remoting</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
