--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>remoting</module>
         <module>common</module>
         <module>broker</module>
+        <module>test</module>
     </modules>
 
     <properties>
@@ -27,6 +28,11 @@
             <dependency>
                 <groupId>bao.study</groupId>
                 <artifactId>remoting</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>bao.study</groupId>
+                <artifactId>broker</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
